# matrix3

./: .gitignore  README.md  README_old.md
src/blinker/: Cargo.toml  README.md
src/blinker/src/: client.rs  main.rs
src/matrixd/: Cargo.toml  Makefile  README.md  Rocket.toml  go.mod  go.sum  post.sh  test_random.sh  test_ws.sh
src/matrixd/app/api/: api.go
src/matrixd/app/api/message/: message.go
src/matrixd/app/common/: common.go
src/matrixd/app/matrix/: matrix.go
src/matrixd/app/message/: message.go
src/matrixd/app/signal/: signal.go
src/matrixd/app/utils/: signal.go
src/matrixd/app/window/: window.go
src/matrixd/cmd/: main.go
src/matrixd/src/: catcher.rs  channels.rs  main.rs  matrix.rs  senders.rs  server.rs
src/matrixd/www/: index.html
src/scripts/: test_all_10.sh  test_ping.sh  test_random.sh  test_ws.sh
src/ui/: package-lock.json
src/ui/src/: App.svelte  main.js  stores.js
src/ui/src/components/: Controller.svelte  Matrix.svelte
