[package]
name = "blinker"
version = "0.1.0"
authors = ["bus710 <bus710@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json"] }
tungstenite = "0.13.0"